// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component support Pass to component $attrs 1`] = `
<div>
  <div
    class="multi-button"
  >
    <button
      class="normal"
      title="I'm a Button"
    >
      
					Option 1
				
    </button>
     
    <button
      class="normal"
      title="I'm a Button"
    >
      
					Option 2
				
    </button>
  </div>
</div>
`;

exports[`Component support Pass to component props 1`] = `
<div>
  <div
    class="multi-button"
  >
    <button
      class="dark"
      some-attr="1"
    >
      
					Option 1
				
    </button>
     
    <button
      class="dark"
      some-attr="1"
    >
      
					Option 2
				
    </button>
  </div>
</div>
`;

exports[`Foundation No children 1`] = `
<div>
  <!---->
</div>
`;

exports[`Foundation No usage 1`] = `
<div>
  <div />
   
  <div />
   
  <div />
</div>
`;

exports[`Native element support Inherit attributes 1`] = `
<div>
  <div
    a="1"
    b="2"
    c="3"
  />
   
  <div
    a="1"
    b="2"
    c="3"
  />
   
  <div
    a="1"
    b="2"
    c="3"
  />
</div>
`;

exports[`Native element support Overwrites attributes 1`] = `
<div>
  <div
    a="1"
    b="2"
    c="3"
  />
   
  <span
    a="1"
    b="2"
    c="3"
    d="3"
    e="2"
    f="1"
  />
</div>
`;
